# asseta

./: .gitignore  docker-compose.yml  render.yaml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 98bd22453b63_add_user_profile_and_gemini_fields.py  a1b2c3d4e5f6_add_barista_monthly_income_to_fi_profile.py
backend/app/: auth.py  config.py  database.py  dependencies.py  main.py  security.py
backend/app/jobs/: alert_evaluator.py  daily_value_job.py  nav_updater.py  snapshot_job.py
backend/app/models/: __init__.py  alert.py  analytics.py  daily_value.py  emergency_fund.py  expense.py  fi_profile.py  fund.py  holding.py  income.py  institution.py  manual_asset.py  networth_snapshot.py  portfolio.py  risk_score.py  snapshot.py  target_allocation.py  transaction.py  user.py
backend/app/repositories/: base_repository.py  fund_repo.py  holding_repo.py  portfolio_repo.py  transaction_repo.py
backend/app/routers/: admin_router.py  alert_router.py  analytics_router.py  auth_router.py  daily_value_router.py  emergency_fund_router.py  expense_router.py  fi_router.py  fund_router.py  holding_router.py  income_router.py  portfolio_router.py  snapshot_router.py  target_allocation_router.py  transaction_router.py
backend/app/scrapers/: mufap_scraper.py
backend/tests/: conftest.py  test_ai_insights.py  test_alerts.py  test_analytics.py  test_auth.py  test_fi.py  test_funds.py  test_portfolios.py  test_risk_scoring.py  test_transactions.py
frontend/: .env.example  (+3 more)
(+90 files in other folders)
